2008-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genPagedPointerSet): fixed bug 1670148
	* support/regression/ports/mcs51-xstack-auto/spec.mk: added expf.c
	* support/regression/tests/bug1670148.c: new, added

2008-02-25 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: fixed bug 1901469.

2008-02-24 Borut Razem <borut.razem AT siol.net>

	* src/SDCCast.c, src/SDCCast.h: fixed bug #1874922: explicit typecast
	  is ineffective for unsigned char parameter

2008-02-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (expandInlineFuncs): fixed bug 1875869
	* src/SDCCglue.c (printIvalBitFields): fixed bug 1806631
	* support/regression/tests/bitopcse.c: removed hc08 exception, see testfwk.h
	* support/Util/MySystem.c (my_system): output errorcode when verbose

2008-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c (genMult): Rewrote 8-bit multiplication by constant,
	  implements #1898231

2008-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/mul.s: Rewrote __muluchar_rrx_s, to improve 8-bit mult.,
	  implements #1896290

2008-02-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createIvalStruct): fixed bug 1466761

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/xa51/spec.mk:
	  added CFLAGS when compiling timeout

2008-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bugs-1596270-1736867.c: Regression test for #1596270, #1736867

2008-02-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCClrange.c (findPrevUse): fixed bug 1888147
	* support/regression/tests/bug1888147.c: new, added
